--- a/index.html
+++ b/index.html
@@ -30,27 +30,53 @@
                 <a href="#skill">SKILL</a>
             </div>
             <div class="navbox">
-                <a href="">EXPERIENCE</a>
+                <a href="#experience">EXPERIENCE</a>
             </div>
             <div class="navbox">
-                <a href="">EDUCATION</a>
+                <a href="#education">EDUCATION</a>
             </div>
             <div class="navbox">
-                <a href="">CONTACT</a>
+                <a href="#contact">CONTACT</a>
             </div>
         </div>
-        <div class="image_container">
-            <div id="self_images">
-                <img class="self_image" alt="ramin_image" src="./resource/image/ramin_cpe_openhouse.jpg"><!--
-                --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_cpe_openhouse_2.jpg"><!--
-                --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_in_usa.jpg"><!--
-                --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_modcom.jpg"><!--
-                --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_workshop_shirt_cpe36.jpg"><!--
-                --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_cpe_openhouse_3.jpg"><!--
-                --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_cpe_openhouse.jpg">
+        <div id="home">
+            <div class="image_container">
+                <div id="self_images">
+                    <!-- The comment in image is to remove the gap between it -->
+                    <img class="self_image" alt="ramin_image" src="./resource/image/ramin_cpe_openhouse.jpg"><!--
+                    --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_cpe_openhouse_2.jpg"><!--
+                    --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_in_usa.jpg"><!--
+                    --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_modcom.jpg"><!--
+                    --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_workshop_shirt_cpe36.jpg"><!--
+                    --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_cpe_openhouse_3.jpg"><!--
+                    --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_cpe_openhouse.jpg">
+                </div>
             </div>
         </div>
         <div id="introduction">
+            <div class="introduction_container">
+                <div class="info_box_introduction">
+                    <h1>Hey there, it's <span>RAMIN!</span></h1>
+                    <p>I'm study Computer Engineering at <br>
+                        <a href="https://www.kmutt.ac.th/en/">King Mongkut's University of Technology Thonburi</a><br>
+                        I am interested in <span>Full Stack development, Database Administration, Quality Assurance, and DevOps</span>.
+                    </p>
+                </div>
+                <div class="static_profile">
+                    <img alt="profile_image" src="./resource/image/ramin_cpe_openhouse_2.jpg">
+                </div>
+            </div>
+        </div>
+        <div id="skill">
+            Test
+        </div>
+        <div id="experience">
+            Test
+        </div>
+        <div id="education">
+            Test
+        </div>
+        <div id="contact">
             Test
         </div>
         <script src="script.js"></script>
