--- a/index.html
+++ b/index.html
@@ -68,7 +68,31 @@
             </div>
         </div>
         <div id="skill">
-            Test
+            <div class="skill_container">
+                <div class="soft_skill_container">
+                    <h1>SOFT SKILLS</h1>
+                    <div class="soft_skill_box">
+                        <div>
+                            <h2>Communication</h2>
+                            <p>Test</p>
+                        </div>
+                        <h2>Leadership</h2>
+                        <h2>Problem Solving</h2>
+                        <h2>Empathy</h2>
+                        <h2>Proofread</h2>
+                        <h2>Documentation</h2>
+                        <h2></h2>
+                        <h2>Algorithm Thinking</h2>
+                        <h2></h2>
+                    </div>
+                </div>
+                <div>
+                    <h1>TECHNICAL SKILLS</h1>
+                    <div class="technical_skill_box">
+                        <!-- test -->
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="experience">
             Test
