Fix image problem

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <img class="self_image" alt="ramin_image" src="./resource/image/ramin_cpe_openhouse.jpg"><!--
                     --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_cpe_openhouse_2.jpg"><!--
                     --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_in_usa.jpg"><!--
-                    --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_modcom.jpg"><!--
+                    --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_modcom.JPG"><!--
                     --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_workshop_shirt_cpe36.jpg"><!--
                     --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_cpe_openhouse_3.jpg"><!--
                     --><img class="self_image" alt="ramin_image" src="./resource/image/ramin_cpe_openhouse.jpg">
@@ -74,16 +74,14 @@
                     <div class="soft_skill_box">
                         <div>
                             <h2>Communication</h2>
-                            <p>Test</p>
+                            
                         </div>
                         <h2>Leadership</h2>
                         <h2>Problem Solving</h2>
                         <h2>Empathy</h2>
                         <h2>Proofread</h2>
                         <h2>Documentation</h2>
-                        <h2></h2>
                         <h2>Algorithm Thinking</h2>
-                        <h2></h2>
                     </div>
                 </div>
                 <div>
